recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:1: error: Missing closing brace `}' assumed here
def tree(nbPas:Int, longueur:Double, angle:Double, multiplicateur:Double)    { 
^Tree:1: error: expected class or object definition
def tree(nbPas:Int, longueur:Double, angle:Double, multiplicateur:Double)    { 
^